--- a/0418A/ClosureStudent.html
+++ b/0418A/ClosureStudent.html
@@ -31,9 +31,9 @@
                 {
                     return score;
                 },
-                setScore(_score)
+                setScore(_score, idx)
                 {
-                    score = _score;
+                    score[idx] = _score;
                 },
                 getAverage() 
                 { 
