--- a/PROJECT/example/boxmodel.html
+++ b/PROJECT/example/boxmodel.html
@@ -25,11 +25,11 @@
 
         #type1 {
             border: 10px solid purple;
-            margin: 10px;
+            margin: 2rem;
         }
         #type2 {
             border: 30px solid purple;
-            margin: 10px;
+            margin: 2rem;
         }
     </style>
 </head>
