--- a/PROJECT/example/flex_grow2.html
+++ b/PROJECT/example/flex_grow2.html
@@ -7,16 +7,19 @@
         .container{
             display: flex;
             flex-direction: row;
-            background-color: aquamarine;
+            justify-content: space-between;
             height: 700px;
+            width: 1000px;
+            background-color: aquamarine;
         }
 
         .item {
+            flex-basis: 20%;
             background-color: palegoldenrod;
             color: darkolivegreen;
             border: 2px solid red;
-            flex-basis: 100px;
         }
+
     </style>
 </head>
 <body>
