--- a/PROJECT/example/flex_shrink.html
+++ b/PROJECT/example/flex_shrink.html
@@ -7,15 +7,17 @@
         .container{
             display: flex;
             flex-direction: row;
-            background-color: aquamarine;
             height: 700px;
+            width: 1000px;
+            background-color: aquamarine;
         }
 
         .item {
+            flex-grow: 1;
+            flex-shrink: 1;
             background-color: palegoldenrod;
             color: darkolivegreen;
             border: 2px solid red;
-            flex-basis: 100px;
         }
     </style>
 </head>
