--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -3,33 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+
+    <script src="./main.js"></script>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600&display=swap" rel="stylesheet">
 
 
 </head>
 <body>
-    <!-- 음악과 아티스트를 추천해주는 사이트
-    1. 장르별 음악과 아티스트??
-    2. 상황별 ??
-    3. ?? -->
+    <!--사용자가 원하는 음악을 태그 데이터를 기반으로 하여
+        가장 쉽고 빠르게 찾아 들을 수 있는 웹사이트다. 
+        
+
+        * 메인메뉴 : ARTIST, MUSIC, M/V, COMUNITY, LOGIN
+        * 메인 메뉴 접속 후 생성 메뉴 : #(입력한 태그가 추가됨), 태그입력공간, 검색 버튼
+        
+        [음악]
+        {태그}
+        감정 : 기쁨(즐거움), 슬픔, 욕망, 긴장감, 그리움, 희망, 공허함, 외로움, 설렘, 무의미함, 오묘함, 야릇함, 신비함
+        테마 : 계절, 크리스마스
+        상황 : 러닝, 클럽, 웨이트 트레이닝(파워 리프팅), 야간 드라이브, 주간 드라이브, 여행, 이별, 긍정적인 기분 전환, 티 타임, 독서, 위로
+        장르 : Rock, PopRock, Hiphop/Rap, Dance, RnB/Soul, CityPop, Synthwave , Jazz, Electro, Funk, Folk, House, Techno, Dsico, SynyhPop, KPOP, EDM
+        템포 : 1 ~ 200 (BPM)
+        청각 스트레스 지수 : 1 ~ 10
+        (+ 사진 모음)
+    -->
 
     <div class="container">
         <nav class="global-nav">
             <div class="global-nav-links">
-                <a href="#" class="global-nav-item">HOME</a>
-                <a href="#" class="global-nav-item">MUSIC</a>
-                <a href="#" class="global-nav-item">BOOK</a>
-                <a href="#" class="global-nav-item">MOVIE</a>
-                <a href="#" class="global-nav-item">AirPops</a>
-                <a href="#" class="global-nav-item">액세서리</a>
+                <a href="#" class="global-nav-item-m" id="global-nav-item-home">
+                    <span class="global-nav-item-home-1">home</span>
+                </a>
+                <a href="#" class="global-nav-item">Artist</a>
+                <a href="#" class="global-nav-item">Music</a>
+                <a href="#" class="global-nav-item">M/V</a>
+                <a href="#" class="global-nav-item">Community</a>
+                <a href="#" class="global-nav-item">Login</a>
             </div>
         </nav>
         <nav class="local-nav">
             <div class="local-nav-links">
-                <a href="#" class="local-nav-item">iPhone17</a>
-                <a href="#" class="local-nav-item">개요</a>
-                <a href="#" class="local-nav-item">구입하기</a>
+                <div class="local-tag-set" id="id_tag_set">
+
+                </div>
+                <!-- <a href="#" class="local-nav-item" id="local-nav-item-tag">#</a> -->
+                <div class="local-tag-add">
+                    <a href="#" class="local-nav-item" id="local-nav-item-serch">TAG</a>
+                    <input type="text" id="local-nav-input" placeholder="태그를 추가하세요.">
+                    <input type="button" value="ADD" id="local-nav-btn">
+                </div>
             </div>
         </nav>
     </div>
