--- a/PROJECT/index2.html
+++ b/PROJECT/index2.html
@@ -7,7 +7,10 @@
     <title>Document</title>
     
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./main2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -29,6 +32,5 @@
             </div>
         </nav>
     </div>
-
 </body>
 </html>
