--- a/PROJECT/music.html
+++ b/PROJECT/music.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    <!-- <script src="./main.js"></script> -->
+    <script src="./main.js"></script>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,29 +45,18 @@
             </div>
         </nav>
         <nav class="local-nav">
-            <div class="local-nav-links">   
-                <section id="section-0">
-                    <div id="id_title" class="local-nav-item fadein-items">s
-                        하현상 - Calibrate
-                    </div>
-                    <div id="id_img" class="local-nav-item">
-                        <img src="./82431351_1640063209646_1_600x600.jpeg" alt="">
-                    </div>
-                    <div id="id_ytb" class="local-nav-item">
-                        <iframe width="1000px" height=747px" src="https://www.youtube.com/embed/sAORllP6mLU" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-
-                </section>
-                <section id="section-1">
-
-                </section>
-                <section id="section-2">
-
-                </section>
+            <div class="local-nav-links">
+                <div class="local-tag-set" id="id_tag_set">
+                <!-- <a href="#" class="local-nav-item" id="local-nav-item-tag">#</a> -->
+                </div>
+                <div class="local-tag-add">
+                    <a href="#" class="local-nav-item" id="local-nav-item-serch">TAG</a>
+                    <input type="text" id="local-nav-input" placeholder="태그를 추가하세요.">
+                    <input type="button" value="ADD" id="local-nav-btn"> <br>
+                </div>
             </div>
+            <div class="local-nav-line"></div>
         </nav>
     </div>
-
-    <script src="./main2.js"></script>
 </body>
 </html>
