--- a/PROJECT/index2.html
+++ b/PROJECT/index2.html
@@ -35,25 +35,25 @@
             <section id="section-0" class="scroll-section">
                 <h1 id="section-0-title">Demon Slayer</h1>
 
-                <div class="sticky-elem serise-message">
+                <div class="sticky-elem serise-message a" id="one" >
                     <p>
                         Episode : 1 <br>
                         Plot
                     </p>
                 </div>
-                <div class="sticky-elem serise-message">
+                <div class="sticky-elem serise-message"id="one" >
                     <p>
                         Episode : 2 <br>
                         Plot
                     </p>
                 </div>
-                <div class="sticky-elem serise-message">
+                <div class="sticky-elem serise-message" id="one" >
                     <p>
                         Episode : 3 <br>
                         Plot
                     </p>
                 </div>
-                <div class="sticky-elem serise-message">
+                <div class="sticky-elem serise-message" id="one" >
                     <p>
                         Episode : 4 <br>
                     </p>
