--- a/PROJECT/login.html
+++ b/PROJECT/login.html
@@ -6,6 +6,7 @@
     <script src=""></script>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="./global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600&display=swap" rel="stylesheet">
