--- a/PROJECT/index2.html
+++ b/PROJECT/index2.html
@@ -34,14 +34,13 @@
         <nav class="middle-nav">
             <section id="section-0" class="scroll-section">
                 <h1 id="section-0-title">Demon Slayer</h1>
-
                 <div class="sticky-elem serise-message a" id="one" >
                     <p>
                         Episode : 1 <br>
                         Plot
                     </p>
                 </div>
-                <div class="sticky-elem serise-message"id="one" >
+                <!-- <div class="sticky-elem serise-message"id="one" >
                     <p>
                         Episode : 2 <br>
                         Plot
@@ -57,7 +56,7 @@
                     <p>
                         Episode : 4 <br>
                     </p>
-                </div>
+                </div> -->
             </section>
 
             <section id="section-1" class="scroll-section">
@@ -71,7 +70,15 @@
 
             <section id="section-2" class="scroll-section">
                 <div class="sticky-elem staff-info">
-                    Thor: Love and Thunder is an upcoming American superhero film based on the Marvel Comics character Thor, produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures. It is intended to be the direct sequel to Thor: Ragnarok (2017) and the 29th film in the Marvel Cinematic Universe (MCU). The film is directed by Taika Waititi, who co-wrote the screenplay with Jennifer Kaytin Robinson, and stars Chris Hemsworth as Thor, alongside Tessa Thompson, Natalie Portman, Christian Bale, Chris Pratt, Jaimie Alexander, Pom Klementieff, Dave Bautista, Karen Gillan, Sean Gunn, Jeff Goldblum, Vin Diesel, and Bradley Cooper. In the film, Thor recruits Valkyrie (Thompson), Korg (Waititi), and Jane Foster (Portman)—who is now the Mighty Thor—to stop Gorr the God Butcher (Bale) from eliminating all the gods.
+                    Seasons change and our love went cold <br>
+                    Feed the flame 'cause we can't let it go <br>
+                    Run away, but we're running in circles <br>
+                    Run away, run away <br>
+                    I dare you to do something <br>
+                    I'm waiting on you again <br>
+                    So I don't take the blame <br>
+                    Run away, but we're running in circles <br>
+                    Run away, run away, run away
                 </div>
             </section>
         </nav>
