--- a/PROJECT/index2.html
+++ b/PROJECT/index2.html
@@ -40,19 +40,19 @@
                         Plot
                     </p>
                 </div>
-                <!-- <div class="sticky-elem serise-message"id="one" >
+                <div class="sticky-elem serise-message b"id="one" >
                     <p>
                         Episode : 2 <br>
                         Plot
                     </p>
                 </div>
-                <div class="sticky-elem serise-message" id="one" >
+                <div class="sticky-elem serise-message c" id="one" >
                     <p>
                         Episode : 3 <br>
                         Plot
                     </p>
                 </div>
-                <div class="sticky-elem serise-message" id="one" >
+                <!-- <div class="sticky-elem serise-message" id="one" >
                     <p>
                         Episode : 4 <br>
                     </p>
